--- a/mnogo.cabal
+++ b/mnogo.cabal
@@ -8,7 +8,7 @@ Author:             Fedor Gogolev <knsd@knsd.net>
 Maintainer:         Fedor Gogolev <knsd@knsd.net>
 Homepage:           https://github.com/lambda-llama/mnogo
 Bug-reports:        https://github.com/lambda-llama/mnogo
-Category:           Database
+Category:           Database, Network
 Stability:          Alpha
 Build-type:         Simple
 Cabal-version:      >= 1.12
@@ -21,12 +21,18 @@ Library
 
     Build-depends:
         base                       >= 4.5.0 && <= 4.8
+      , bytestring                 == 0.9.* || == 0.10.*
+      , mtl                        == 2.1.*
       , bresson                    == 0.0.*
+      , exceptions                 == 0.3.*
 
     Exposed-modules:
         Database.Mongodb
+        Database.Mongodb.Connection
+    Other-modules:
+        Database.Mongodb.Internal
 
-Test-suite hen-tests
+Test-suite mnogo-tests
     Main-is:          Tests.hs
     Hs-source-dirs:   src, tests
     Default-language: Haskell2010
@@ -34,7 +40,10 @@ Test-suite hen-tests
 
     Build-depends:
         base                       >= 4.5.0 && <= 4.8
+      , bytestring                 == 0.9.* || == 0.10.*
+      , mtl                        == 2.1.*
       , bresson                    == 0.0.*
+      , exceptions                 == 0.3.*
 
       , tasty                      == 0.3.*
 
