--- a/mnogo.cabal
+++ b/mnogo.cabal
@@ -22,6 +22,7 @@ Library
     Build-depends:
         base                       >= 4.5.0 && <= 4.8
       , bytestring                 == 0.9.* || == 0.10.*
+      , network                    == 2.4.*
       , mtl                        == 2.1.*
       , bresson                    == 0.0.*
       , exceptions                 == 0.3.*
@@ -41,6 +42,7 @@ Test-suite mnogo-tests
     Build-depends:
         base                       >= 4.5.0 && <= 4.8
       , bytestring                 == 0.9.* || == 0.10.*
+      , network                    == 2.4.*
       , mtl                        == 2.1.*
       , bresson                    == 0.0.*
       , exceptions                 == 0.3.*
