--- a/mnogo.cabal
+++ b/mnogo.cabal
@@ -24,12 +24,16 @@ Library
       , bytestring                 == 0.9.* || == 0.10.*
       , network                    == 2.4.*
       , mtl                        == 2.1.*
+      , text                       == 0.11.*
       , bresson                    == 0.0.*
+      , bitset                     == 1.4.*
+      , vector                     == 0.10.*
       , exceptions                 == 0.3.*
 
     Exposed-modules:
         Database.Mongodb
         Database.Mongodb.Connection
+        Database.Mongodb.Protocol
     Other-modules:
         Database.Mongodb.Internal
 
