--- a/mnogo.cabal
+++ b/mnogo.cabal
@@ -13,9 +13,11 @@ Stability:          Alpha
 Build-type:         Simple
 Cabal-version:      >= 1.12
 Tested-with:        GHC == 7.6.*
+Extra-Source-Files: include/*.h
 
 Library
     Hs-source-dirs:     src
+    Include-dirs:       include
     Ghc-options:        -Wall -fno-warn-orphans
     Default-language:   Haskell2010
 
@@ -27,6 +29,7 @@ Library
       , text                       == 0.11.*
       , bresson                    == 0.0.*
       , bitset                     == 1.4.*
+      , binary                     == 0.5.*
       , vector                     == 0.10.*
       , exceptions                 == 0.3.*
 
