--- a/mnogo.cabal
+++ b/mnogo.cabal
@@ -24,7 +24,9 @@ Library
     Build-depends:
         base                       >= 4.5.0 && <= 4.8
       , bytestring                 == 0.9.* || == 0.10.*
+      , unix                       == 2.6.*
       , random                     == 1.0.*
+      , time                       == 1.4.*
       , network                    == 2.4.*
       , mtl                        == 2.1.*
       , text                       == 0.11.*
