--- a/mnogo.cabal
+++ b/mnogo.cabal
@@ -24,6 +24,7 @@ Library
     Build-depends:
         base                       >= 4.5.0 && <= 4.8
       , bytestring                 == 0.9.* || == 0.10.*
+      , containers                 == 0.5.*
       , unix                       == 2.6.*
       , random                     == 1.0.*
       , time                       == 1.4.*
